# kafkart

./: Cargo.toml  README.md
kafka-encode/: Cargo.toml
kafka-encode-derive/: Cargo.toml
kafka-encode-derive/src/: from_kafka_bytes_impl.rs  lib.rs  tests.rs  to_kafka_bytes_impl.rs
kafka-encode-derive/tests/: derive_test.rs
kafka-encode/src/: err.rs  implementation.rs  lib.rs  primitives.rs  tests.rs
src/: client.rs  lib.rs
src/protocol/: api_key.rs  api_versions.rs  err.rs  headers.rs  mod.rs  networking.rs  produce.rs  records.rs  requests.rs  tags.rs  tests.rs
