[package]
name = "kafka-encode-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
kafka-encode = { path = "../kafka-encode" }
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.49"

[dev-dependencies]
prettyplease = "0.1.23"
bytes = "1.3.0"
