[package]
name = "kafka-encode-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
kafka-encode = { path = "../kafka-encode" }
syn = {version = "1.0.107", features = ["extra-traits"]}
quote = "1.0.23"
proc-macro2 = "1.0.49"
prettyplease = "0.1.23"
anyhow = "1.0.69"

[dev-dependencies]
prettyplease = "0.1.23"
