[package]
name = "kafka-encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0.4"
uuid = "1.2.2"
tracing = "0.1.37"
anyhow = "1.0.69"
thiserror = "1.0.38"
tracing-subscriber = "0.3.16"

[dev-dependencies]
tracing-test = "0.2.4"
ctor = "0.1.26"
